# CalculateDateCpp

./: CDate.cpp  CMakeLists.txt  DateFunctions.cpp  DateFunctions.h  README.md  main.cpp
test/: CMakeLists.txt  ComputeNextDateTests.cpp  ComputePreviousDateTests.cpp  IsDateValidTests.cpp  LeapYearTests.cpp
